separate headers and bodies into response request types. Start work on switching to workers
